- Fixed bug #55007 (compiler fail after previous fail)